--- a/LICENSE.org
+++ b/LICENSE.org
@@ -1,6 +1,9 @@
+# This file is released by its authors and contributors under the GNU
+# Free Documentation license v1.3 or later, code examples are released
+# under the GNU General Public License v3 or later.
+
 The contents of this repository is licensed under the [[https://www.gnu.org/licenses/fdl-1.3.html][GNU Free
 Documentation License version 1.3 or later]].
 
 The code examples and CSS stylesheets are licensed under the [[https://www.gnu.org/licenses/gpl-3.0.html][GNU
 General Public License v3 or later]].
-
