--- a/elpa.org
+++ b/elpa.org
@@ -10,7 +10,8 @@
 
 For versions <= 9.5, [[https://orgmode.org][orgmode.org]] hosts Org ELPA archives.
 
-*Beware that no new Org versions will be released on Org ELPA after 9.5.*
+*Beware that no new Org versions will be released on Org ELPA after
+9.5.*
 
 Add this to your Emacs init file to be able to list the Org mode
 archives:
