--- a/Changes.org
+++ b/Changes.org
@@ -2,11 +2,11 @@
 #+setupfile: setup.org
 #+link:      git https://git.savannah.gnu.org/cgit/emacs/org-mode.git/commit/?id=%s
 #+link:      doc https://orgmode.org/worg/doc.html#%s
+#+link:      msg https://list.orgmode.org/%s
 #+description: Org Org-mode Emacs Changes ChangeLog release notes
 #+include: "./resources/preamble.html" export html
 
 #+include: "./resources/normal-outline-3.html" export html
-
 
 @@html:<br/>@@
 
@@ -503,7 +503,7 @@ heading, except return nil.
 
 In the past, faces of todo keywords, emphasised text, tags, and
 priority cookies inherited =default= face.  The resulting headline
-fontification was not always consistent, as discussed in [[https://lists.gnu.org/archive/html/emacs-orgmode/2020-09/msg00331.html][this bug
+fontification was not always consistent, as discussed in [[msg::87h7sawubl.fsf@protesilaos.com][this bug
 report]].  Now, the relevant faces adapt to face used to fontify the
 current headline level.
 
