--- a/index.org
+++ b/index.org
@@ -19,12 +19,12 @@
     </h2>
     <p>
       A <a href="https://www.gnu.org/software/emacs/" style="color: inherit; font-weight: bold; font-style: italic;"
-           title="A Lisp Machine which masquerades as an editor">GNU Emacs</a>
-      major mode for <span itemprop="applicationCategory">convenient plain text markup</span> &mdash; and much more.</p>
-    <p>Org mode is for keeping notes, maintaining to-do lists, planning
-      projects, authoring documents, computational notebooks, literate
-      programming and more &mdash; in a fast and effective plain text
+           title="An extensible, customizable, free/libre text editor">GNU Emacs</a>
+      major mode for <span itemprop="applicationCategory"> keeping notes, authoring documents, 
+      computational notebooks, literate programming, maintaining to-do lists, planning
+      projects, and more &mdash; in a fast and effective plain text
       system.</p>
+    <p><code>git clone git://git.sv.gnu.org/emacs/org-mode.git</code></p>
     <p class="bubble">
       Support via&ensp;
       <a href="https://liberapay.com/bzg" title="Donations always help"
