Point to the manual's installation guide
The first and most important part of install.org page was redundant
with the installation instructions on the manual.

Also, the natural expectation is that the manual will always be up to
date, while the page might not be.

The commit promotes the rest of the page in index.org since these are
general information that can be useful to the casual reader.

--- a/fr/index.org
+++ b/fr/index.org
@@ -67,7 +67,7 @@
 Explorez les possibilités.
 @@html:</a>@@
 ** Installation
-@@html:<a href="install.html">@@
+@@html:<a href="https://orgmode.org/org.html#Installation">@@
 [[file:../resources/img/install.svg]]
 
 Qu'est-ce que vous attendez ?
