--- a/index.org
+++ b/index.org
@@ -70,7 +70,7 @@
 @@html:</a>@@
 
 ** Install
-@@html:<a href="install.html">@@
+@@html:<a href="https://orgmode.org/org.html#Installation">@@
 #+attr_html: :alt Downwards facing arrow :title What are you waiting for?
 [[file:resources/img/install.svg]]
 
@@ -159,3 +159,38 @@ as an HTML website.  New [[https://orgmode.org/worg/worg-git.html#contribute-to-
 #+BEGIN_SRC shell
 ~$ git clone https://git.sr.ht/~bzg/worg
 #+END_SRC
+
+* Doom, Spacemacs, Scimax and popular configs
+:PROPERTIES:
+:CUSTOM_ID: configs
+:END:
+
+The Emacs starter kits [[https://github.com/hlissner/doom-emacs][Doom]], [[https://www.spacemacs.org/][Spacemacs]] and [[https://github.com/jkitchin/scimax][Scimax]] come with a curated
+set of packages and configurations that aim to enhance Org mode (and
+Emacs more generally) for particular use cases.  They include Org
+along with integrations between =org-mode= and other modes (such as
+=evil-mode=).  Here are links to the current packages included with
+[[https://github.com/hlissner/doom-emacs/blob/develop/modules/lang/org/packages.el][Doom]], and [[https://github.com/syl20bnr/spacemacs/blob/master/layers/%2Bemacs/org/packages.el][Spacemacs]].  /Scimax/ is deeply integrated with Org so a good
+place to start is the [[https://github.com/jkitchin/scimax/blob/master/scimax.org#org-mode][manual]].  /Doom/ installs a version of Org that is
+close to the development ~HEAD~, while /Spacemacs/ and /Scimax/ track org
+elpa.
+
+Starter kits often make significant changes to the default user
+experience for Emacs.  If you are looking for something closer to
+vanilla Emacs there are popular configs such as [[https://github.com/purcell/emacs.d/blob/master/lisp/init-org.el][Purcell's emacs.d]] that
+include org-mode customization and Org-related packages.
+
+* In Other Editors
+:PROPERTIES:
+:CUSTOM_ID: editors
+:END:
+
+While the full set of Org [[file:features.html][features]] is currently exclusive to Emacs,
+basic functionality for Org files has been implemented for a variety
+of editors.  Here are some extensions for other editors that enable
+support for Org files.
+
+- Vim :: [[https://github.com/kristijanhusak/orgmode.nvim][orgmode.nvim]], [[https://github.com/jceb/vim-orgmode][vim-orgmode]], and [[https://github.com/axvr/org.vim][org.vim]]
+- Atom :: [[https://atom.io/packages/org-mode][org-mode]]
+- VS Code :: [[https://github.com/vscode-org-mode/vscode-org-mode][vscode-org-mode]]
+- Sublime :: [[https://packagecontrol.io/packages/OrgExtended][OrgExtended]]
