Replace the community button by a link to Worg
Promote some contents of the community page to the index page.

--- a/contribute.org
+++ b/contribute.org
@@ -33,9 +33,9 @@ experience.
 </p></div>
 #+end_export
 
-The fastest way to get involved is by joining the [[file:community.org][community]] and
-[[https://lists.gnu.org/mailman/listinfo/emacs-orgmode][subscribing to the mailing list]].  You can also always get in touch via
-[[mailto:emacs-orgmode@gnu.org][emacs-orgmode@gnu.org]] to help move the project forward.
+The fastest way to get involved is by [[https://lists.gnu.org/mailman/listinfo/emacs-orgmode][subscribing to the mailing list]].
+You can also always get in touch via [[mailto:emacs-orgmode@gnu.org][emacs-orgmode@gnu.org]] to help
+move the project forward.
 
 # FIXME this section needs links, e.g. to instructions for running tests
 
